--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,11 +18,9 @@
       Sobre mí
     </h2>
     <p data-aos="fade-up" data-aos-delay="400">
-      Con más 3 años de experiencia, me destaco en el desarrollo de
-      aplicaciones web en el que pongo en práctica tanto Frontend como Backend,
-      en el cual me familizarizo con herramientas como Nodejs, Angular,
-      Typescript y Python. Además de hacer uso de base de datos relacionales y
-      no relacional. A la ves tengo conocimiento en uso de contenedores docker y
+      Me destaco en el desarrollo de aplicaciones web en el que pongo en práctica tanto Frontend como Backend,
+      en el cual me familizarizo con herramientas como Nodejs, Angular, Typescript y Python.
+      Además de hacer uso de base de datos relacionales y no relacional. A la ves tengo conocimiento en uso de contenedores docker y
       despliegues en AWS.
     </p>
   </div>
