--- a/src/app/components/actions-buttons/actions-buttons.component.html
+++ b/src/app/components/actions-buttons/actions-buttons.component.html
@@ -2,7 +2,7 @@
   <a class="button primary" href="./assets/CV.pdf" target="_blank">
     Descargar CV
   </a>
-  <a class="button primary" href="mailto:avsg1991@gmail.com">
+  <a class="button primary" href="mailto:holguinpedro@gmail.com">
     {{ 'holguinpedro@gmail.com' }}
   </a>
 </div>
